--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to HoTMiX!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -14,57 +15,55 @@
 				<img src="/static/logo-no-background.png" alt="HoTMiXer logo" height="40" width="211">
 				
 			</a>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="#get-started">Get Started</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#docs">Docs</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#help">Help</a>
-					</li>
-				</ul>
+			<ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#get-started">Get Started</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#docs">Docs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#help">Help</a>
+                </li>
+            </ul>
 			</div>
 		</div>
 	</nav>
 
 	<div class="text-center py-5">
-		<img src="/static/logo-no-background.png" alt="HoTMiXer logo" height="150" width="790">
+		<img src="/static/logo-no-background.png" alt="HoTMiXer logo" height="125" width="660">
 	</div>
 
     <main id="main-content" class="container py-4">
       <div class="row">
-        <section id="quick-scaffolding" class="col my-5">
-            <h2>Quick Scaffolding</h2>
-            <p>Get your project up and running with our quick setup tools.</p>
+        <section id="quick-scaffolding" class="col my-5 bg-light p-4 rounded shadow">
+            <h2 class="text-dark-green">Quick Scaffolding</h2>
+            <p class="text-secondary">Get your project up and running with our quick setup tools. Our scaffolding system allows you to quickly set up the basic structure of your application, saving you time and effort. You can easily customize the scaffolding to suit your project's specific needs.</p>
             <!-- Additional content goes here -->
         </section>
-
-        <section id="backend-options" class="col my-5">
-            <h2>Backend Options</h2>
-            <p>Choose from a variety of backend frameworks to suit your project needs.</p>
+        
+        <section id="backend-options" class="col my-5 bg-light p-4 rounded shadow">
+            <h2 class="text-dark-green">Backend Options</h2>
+            <p class="text-secondary">Choose from a variety of backend frameworks to suit your project needs. We support a wide range of popular frameworks, giving you the flexibility to choose the one that best fits your project. Whether you're building a simple website or a complex web application, we've got you covered.</p>
             <!-- Additional content goes here -->
         </section>
-
-        <section id="htmx-integration" class="col my-5">
-            <h2>HTMX Integration</h2>
-            <p>Integrate HTMX for dynamic content without writing JavaScript.</p>
+        
+        <section id="htmx-integration" class="col my-5 bg-light p-4 rounded shadow">
+            <h2 class="text-dark-green">HTMX Integration</h2>
+            <p class="text-secondary">Integrate HTMX for dynamic content without writing JavaScript. HTMX allows you to access modern browser features directly from HTML, without having to write any JavaScript. This makes it easier to build interactive web applications with less code.</p>
             <!-- Additional content goes here -->
         </section>
 	  </div>
 
 	  <div class="row">
         <section id="get-started-quickly" class="col-md-6 my-5">
-            <h2>Get Started Quickly</h2>
+            <h2 class="text-dark-green">Get Started Quickly</h2>
             <p>Run the following command to create a new project:</p>
             <pre><code>hotmixer create test</code></pre>
         </section>
 
         <section id="terminal-output" class="col-md-6 my-5">
-            <h2>Terminal Output</h2>
-            <div class="terminal">
+            <div class="terminal" id="animated-terminal">
                 <!-- Faux terminal output goes here -->
             </div>
         </section>
@@ -101,5 +100,42 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/htmx.org"></script>
+    <script>
+        var i = 0;
+        var txt = `hotmixer create hotmix-site\n
+        Script started\n
+        Command received: create hotmix-site\n
+        ? Which backend would you like to use? flask\n
+        ? Which styling would you like to use? bootstrap\n
+        Creating new project: hotmix-site\n
+        ✔ Directory hotmix-site created successfully.\n
+        ✔ Template files copied successfully.\n
+        ✔ Dependencies installed successfully.\n
+        ⠋ Initializing Git repositoryInitialized empty Git repository in C:/Users/kyle.reynolds/Documents/Dev/hotmix-site/.git/\n
+        `;
+        var speed = 50;
+
+        function typeWriter() {
+         if (i < txt.length) {
+           if (txt.charAt(i) === '\n') {
+             document.getElementById("animated-terminal").innerHTML += '<br>';
+           } else {
+             document.getElementById("animated-terminal").innerHTML += txt.charAt(i);
+           }
+           i++;
+           setTimeout(typeWriter, speed);
+         } else {
+           setTimeout(resetText, 2000); // Wait for 2 seconds before starting to type again
+         }
+        }
+
+        function resetText() {
+          document.getElementById("animated-terminal").innerHTML = "";
+          i = 0;
+          typeWriter();
+        }
+
+        typeWriter();
+    </script>
 </body>
 </html>
