--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,6 @@
 		<div class="container">
 			<a class="navbar-brand" href="#">
 				<img src="/static/logo-no-background.png" alt="HoTMiXer logo" height="40" width="211">
-				
 			</a>
 			<ul class="navbar-nav ms-auto">
                 <li class="nav-item">
@@ -26,7 +25,6 @@
                     <a class="nav-link" href="#help">Help</a>
                 </li>
             </ul>
-			</div>
 		</div>
 	</nav>
 
@@ -36,38 +34,35 @@
 
     <main id="main-content" class="container py-4">
       <div class="row">
-        <section id="quick-scaffolding" class="col my-5 bg-light p-4 rounded shadow">
+        <section id="quick-scaffolding" class="col-md-4 my-5 bg-light p-4 rounded shadow">
             <h2 class="text-dark-green">Quick Scaffolding</h2>
             <p class="text-secondary">Get your project up and running with our quick setup tools. Our scaffolding system allows you to quickly set up the basic structure of your application, saving you time and effort. You can easily customize the scaffolding to suit your project's specific needs.</p>
             <!-- Additional content goes here -->
         </section>
         
-        <section id="backend-options" class="col my-5 bg-light p-4 rounded shadow">
+        <section id="backend-options" class="col-md-4 my-5 bg-light p-4 rounded shadow">
             <h2 class="text-dark-green">Backend Options</h2>
             <p class="text-secondary">Choose from a variety of backend frameworks to suit your project needs. We support a wide range of popular frameworks, giving you the flexibility to choose the one that best fits your project. Whether you're building a simple website or a complex web application, we've got you covered.</p>
             <!-- Additional content goes here -->
         </section>
         
-        <section id="htmx-integration" class="col my-5 bg-light p-4 rounded shadow">
+        <section id="htmx-integration" class="col-md-4 my-5 bg-light p-4 rounded shadow">
             <h2 class="text-dark-green">HTMX Integration</h2>
             <p class="text-secondary">Integrate HTMX for dynamic content without writing JavaScript. HTMX allows you to access modern browser features directly from HTML, without having to write any JavaScript. This makes it easier to build interactive web applications with less code.</p>
             <!-- Additional content goes here -->
         </section>
 	  </div>
 
-	  <div class="row">
-        <section id="get-started-quickly" class="col-md-6 my-5">
+	  <div class="row justify-content-center">
+        <section id="get-started-quickly" class="col-md-8 my-5">
             <h2 class="text-dark-green">Get Started Quickly</h2>
-            <p>Run the following command to create a new project:</p>
+            <p>To create a new project, run the following command:</p>
             <pre><code>hotmixer create test</code></pre>
+            <p>This will create a new directory named "test" with a basic project structure. You can then navigate into the new directory and start your development server:</p>
+            <p>Follow along with the instructions to get your development server up and running</p>
+            <p>Happy Hacking!</p>
         </section>
-
-        <section id="terminal-output" class="col-md-6 my-5">
-            <div class="terminal" id="animated-terminal">
-                <!-- Faux terminal output goes here -->
-            </div>
-        </section>
-    </div>
+	  </div>
         
         <!-- Additional sections for Docs, Getting Started, and API -->
         <!-- ... -->
@@ -80,20 +75,20 @@
 
     <!-- Footer -->
     <footer class="bg-light text-center py-3">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <p>Docs</p>
-            </div>
-            <div class="col">
-                <p>Created with HoTMiX - Your HTMX scaffolding tool.</p>
-            </div>
-            <div class="col">
-                <p>Social</p>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <a href="/templates/docs.html" target="_blank" class="btn btn-outline-dark">Docs</a>
+                </div>
+                <div class="col">
+                    <p>Created with HoTMiX - Your HTMX scaffolding tool.</p>
+                </div>
+                <div class="col">
+                    <a href="https://www.npmjs.com/package/hotmixer" target="_blank" class="btn btn-outline-dark">NPM - HoTMiXer</a>
+                </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
     <!-- Scripts for Bootstrap and HTMX -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
