--- a/templates/docs.html
+++ b/templates/docs.html
@@ -28,7 +28,32 @@
 		</div>
 	</nav>
 
+    
+
+    <div class="container-fluid">
+        <div class="row">
+            <!-- Sidebar Navigation -->
+            <nav id="doc-sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+                <div class="sidebar-sticky pt-3">
+                    <ul class="nav flex-column">
+                        <li class="nav-item"><a class="nav-link active" href="#introduction">Introduction</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#installation">Installation</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#getting-started">Getting Started</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#usage-examples">Usage Examples</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#backend-technologies">Backend Technologies</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#faq">FAQs</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#contributing">Contributing</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#license">License</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#acknowledgments">Acknowledgments</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#contact-support">Contact and Support</a></li>
+                    </ul>
+                </div>
+            </nav>
+
     <main id="main-content" class="container py-4">
+        <div class="text-center py-5 logo-container-docs">
+            <img src="/static/logo-no-background.png" alt="HoTMiXer logo" height="125" width="660">
+        </div>
         <header class="text-center py-5">
             <h1>HoTMiX Documentation</h1>
             <p>A Comprehensive Guide to Getting Started with HoTMiX</p>
@@ -71,6 +96,12 @@
             <p>Example commands:</p>
             <pre><code>hotmix create blog --backend flask</code></pre>
             <p>This command sets up a new blog project using Flask as the backend.</p>
+            <p>HoTMiX supports the following backends:</p>
+            <ul>
+                <li>Python - Flask</li>
+                <li>Golang - Gin</li>
+                <li>JavaScript - Express</li>
+            </ul>
         </section>
         
 
@@ -120,7 +151,7 @@
                 <li>GitHub Issues: <a href="https://github.com/KDreynolds/HoTMiX/issues">HoTMiX GitHub Issues</a></li>
                 <li>Twitter: <a href="https://twitter.com/imyerf">@imYerf</a></li>
             </ul>
-            <p>We strive to respond to queries and resolve issues promptly and appreciate your feedback and suggestions for improving HoTMiX.</p>
+            <p>We strive to respond to queries and resolve issues promptly and appreciate your feedback and suggestions for improving HoTMiXer.</p>
         </section>
         
 
@@ -134,4 +165,8 @@
     <!-- Bootstrap and HTMX scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/htmx.org"></script>
+
+</body>
+</html>
