--- a/static/style.css
+++ b/static/style.css
@@ -7,48 +7,17 @@ body {
     height: 100vh;
 }
 header {
-    color: white;
+    color: black;
 }
 #main-content {
     flex: 1;
     color: #044B05;
     position: relative;
     z-index: 1;
-    padding-top: 60px;
-    padding-bottom: 20px;
-}
-
-.terminal {
-    background-color: #3f3f3f;
-    color: #fff;
-    padding: 10px;
-    font-family: monospace;
-    width: 25vw; /* Adjust as needed */
-    height: 20vh; /* Adjust as needed */
-    overflow: auto;
-    border-radius: 10px;
 }
 
 .text-dark-green {
     color: #044B05; /* This is a dark green color */
-}
-
-#doc-sidebar .nav-link {
-    color: #333; /* Change as needed */
-    background-color: #f5f5f5; /* Change as needed */
-    border-radius: 5px;
-    margin-bottom: 5px;
-    transition: all 0.3s ease;
-}
-
-#doc-sidebar .nav-link:hover {
-    color: #fff; /* Change as needed */
-    background-color: #ff7300; /* Change as needed */
-}
-
-#doc-sidebar .nav-link.active {
-    color: #ff7300; /* Change as needed */
-    background-color: #044B05; /* Change as needed */
 }
 
 .logo-container {
@@ -60,8 +29,31 @@ header {
 }
 
 .logo-container-docs {
-    padding-top: 50px /* Adjust as needed */ !important;
     margin-left: -240px /* Adjust as needed */!important;
-    padding-bottom: 0px !important;
 }
 
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+#navbar-example2 {
+    background-color: #044B05; /* This is your dark green color */
+    color: #ff7300; /* This is your orange color for the text */
+}
+
+#navbar-example2 .nav-link {
+    color: #ffffff; /* This is your orange color for the links */
+    font-size: 0.9rem; /* Adjust as needed */
+}
+
+#navbar-example2 .nav-link:hover {
+    color: #fff; /* This is white color for the hover state */
+}
+
+#navbar-example2 .nav-link.active {
+    color: #ffffff; /* This is your green color for the active link */
+    background-color: #ff7300; /* This is your orange color for the active link background */
+}
