--- a/templates/docs.html
+++ b/templates/docs.html
@@ -7,14 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/style.css">
 </head>
-<body>
-     <!-- Navigation Bar -->
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<div class="container">
-			<a class="navbar-brand" href="#">
-				<img src="/static/logo-no-background.png" alt="HoTMiXer logo" height="40" width="211">
-			</a>
-			<ul class="navbar-nav ms-auto">
+<body data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" tabindex="0">
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="/static/logo-no-background.png" alt="HoTMiXer logo" height="40" width="211">
+            </a>
+            <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="#get-started">Get Started</a>
                 </li>
@@ -25,35 +25,47 @@
                     <a class="nav-link" href="#help">Help</a>
                 </li>
             </ul>
-		</div>
-	</nav>
+        </div>
+    </nav>
 
-    
-
-    <div class="container-fluid">
-        <div class="row">
-            <!-- Sidebar Navigation -->
-            <nav id="doc-sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-                <div class="sidebar-sticky pt-3">
-                    <ul class="nav flex-column">
-                        <li class="nav-item"><a class="nav-link active" href="#introduction">Introduction</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#installation">Installation</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#getting-started">Getting Started</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#usage-examples">Usage Examples</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#backend-technologies">Backend Technologies</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#faq">FAQs</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#contributing">Contributing</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#license">License</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#acknowledgments">Acknowledgments</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#contact-support">Contact and Support</a></li>
-                    </ul>
-                </div>
-            </nav>
+    <nav id="navbar-example2" class="navbar px-3">
+        <div class="container-lg justify-content-center flex-nowrap">
+        <ul class="nav nav-pills">
+            <li class="nav-item">
+                <a class="nav-link" href="#introduction">Introduction</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#installation">Installation</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#getting-started">Getting Started</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#usage-examples">Usage Examples</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#backend-technologies">Backend Technologies</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#faq">FAQs</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#contributing">Contributing</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#license">License</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#acknowledgments">Acknowledgments</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#contact-support">Contact and Support</a>
+            </li>
+        </ul>
+    </div>
+    </nav>
 
     <main id="main-content" class="container py-4">
-        <div class="text-center py-5 logo-container-docs">
-            <img src="/static/logo-no-background.png" alt="HoTMiXer logo" height="125" width="660">
-        </div>
         <header class="text-center py-5">
             <h1>HoTMiX Documentation</h1>
             <p>A Comprehensive Guide to Getting Started with HoTMiX</p>
@@ -167,6 +179,20 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/htmx.org"></script>
+    <script>
+            window.onscroll = function() {myFunction()};
+
+    var navbar = document.getElementById("navbar-example2");
+    var sticky = navbar.offsetTop;
+
+    function myFunction() {
+        if (window.pageYOffset >= sticky) {
+            navbar.classList.add("sticky")
+        } else {
+            navbar.classList.remove("sticky");
+        }
+    }
+    </script>
 
 </body>
 </html>
