--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" href="#get-started">Get Started</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#docs">Docs</a>
+                    <a class="nav-link" href="/templates/docs.html">Docs</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#help">Help</a>
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <a href="/templates/docs.html" target="_blank" class="btn btn-outline-dark">Docs</a>
+                    <a href="/templates/docs.html" class="btn btn-outline-dark">Docs</a>
                 </div>
                 <div class="col">
                     <p>Created with HoTMiX - Your HTMX scaffolding tool.</p>
