--- a/templates/index.html
+++ b/templates/index.html
@@ -11,18 +11,18 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="/templates/index.html">
 				<img src="/static/logo-no-background.png" alt="HoTMiXer logo" height="40" width="211">
 			</a>
 			<ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#get-started">Get Started</a>
+                    <a class="nav-link" href="/templates/docs.html#getting-started">Get Started</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/templates/docs.html">Docs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#help">Help</a>
+                    <a class="nav-link" href="/templates/docs.html#contact-support">Help</a>
                 </li>
             </ul>
 		</div>
@@ -74,17 +74,17 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-light text-center py-3">
+    <footer class="text-center py-3">
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <a href="/templates/docs.html" class="btn btn-outline-dark">Docs</a>
+                    <a href="/templates/docs.html" class="btn btn-outline-light">Docs</a>
                 </div>
                 <div class="col">
                     <p>Created with HoTMiX - Your HTMX scaffolding tool.</p>
                 </div>
                 <div class="col">
-                    <a href="https://www.npmjs.com/package/hotmixer" target="_blank" class="btn btn-outline-dark">NPM - HoTMiXer</a>
+                    <a href="https://www.npmjs.com/package/hotmixer" target="_blank" class="btn btn-outline-light">NPM - HoTMiXer</a>
                 </div>
             </div>
         </div>
