--- a/templates/docs.html
+++ b/templates/docs.html
@@ -11,18 +11,18 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/templates/index.html">
                 <img src="/static/logo-no-background.png" alt="HoTMiXer logo" height="40" width="211">
             </a>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#get-started">Get Started</a>
+                    <a class="nav-link" href="/templates/docs.html#getting-started">Get Started</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#docs">Docs</a>
+                    <a class="nav-link" href="/templates/docs.html">Docs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#help">Help</a>
+                    <a class="nav-link" href="/templates/docs.html#contact-support">Help</a>
                 </li>
             </ul>
         </div>
@@ -170,7 +170,7 @@
     </main>
 
     <!-- Footer (same as main page) -->
-    <footer class="bg-light text-center py-3">
+    <footer class="text-center py-3">
         <!-- Footer content -->
     </footer>
 
