--- a/templates/docs.html
+++ b/templates/docs.html
@@ -12,17 +12,11 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="/templates/index.html">
-                <img src="/static/logo-no-background.png" alt="HoTMiXer logo" height="40" width="211">
+                <img src="/static/logo-no-background.png" alt="HoTMiXer logo" class="logo">
             </a>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/templates/docs.html#getting-started">Get Started</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/templates/docs.html">Docs</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/templates/docs.html#contact-support">Help</a>
+                    <a class="nav-link" href="/templates/index.html">Home</a>
                 </li>
             </ul>
         </div>
@@ -57,9 +51,6 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#acknowledgments">Acknowledgments</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#contact-support">Contact and Support</a>
             </li>
         </ul>
     </div>
@@ -122,6 +113,7 @@
             <p>HoTMiX supports several backend technologies, including:</p>
             <ul>
                 <li><strong>Flask:</strong> A lightweight and flexible Python web framework.</li>
+                <li><strong>Django:</strong> A very popular Python web framework.</li>
                 <li><strong>Gin:</strong> A high-performance Go web framework.</li>
                 <li><strong>Node.js:</strong> A JavaScript runtime for building scalable network applications.</li>
             </ul>
