--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,11 @@
 			<a class="navbar-brand" href="#">
 				<img src="/static/logo-no-background.png" alt="HoTMiXer logo" class="logo">
 			</a>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/templates/docs.html">Docs</a>
+                </li>
+            </ul>
 		</div>
 	</nav>
 
