--- a/templates/docs.html
+++ b/templates/docs.html
@@ -98,9 +98,21 @@
 
     </main>
 
-    <!-- Footer (same as main page) -->
+    <!-- Footer -->
     <footer class="text-center py-3">
-        <!-- Footer content -->
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <a href="/templates/docs.html" class="btn btn-outline-light">Docs</a>
+                </div>
+                <div class="col">
+                    <p>Created with HoTMiX - Your HTMX scaffolding tool.</p>
+                </div>
+                <div class="col">
+                    <a href="https://www.npmjs.com/package/hotmixer" target="_blank" class="btn btn-outline-light">NPM - HoTMiXer</a>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <!-- Bootstrap and HTMX scripts -->
