--- a/templates/docs.html
+++ b/templates/docs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HoTMiX Documentation</title>
+    <title>HoTMiXer Documentation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/style.css">
 </head>
@@ -58,30 +58,30 @@
 
     <main id="main-content" class="container py-4">
         <header class="text-center py-5">
-            <h1>HoTMiX Documentation</h1>
-            <p>A Comprehensive Guide to Getting Started with HoTMiX</p>
+            <h1>HoTMiXer Documentation</h1>
+            <p>A Comprehensive Guide to Getting Started with HoTMiXer</p>
         </header>
 
         <section id="introduction" class="my-4">
             <h2>Introduction</h2>
             <p>
-                HoTMiX is a versatile command-line tool designed to streamline the process of starting new web projects. Leveraging the power of HTMX along with various backend technologies such as Flask, Gin, and Node.js, HoTMiX simplifies the initial setup and scaffolding of web applications. This tool is ideal for developers looking to reduce the time and effort in project initialization, offering easy scaffolding, diverse backend options, and seamless HTMX integration for a more efficient development process.
+                HoTMiXer is a versatile command-line tool designed to streamline the process of starting new web projects. Leveraging the power of HTMX along with various backend technologies such as Flask, Gin, and Node.js, HoTMiXer simplifies the initial setup and scaffolding of web applications. This tool is ideal for developers looking to reduce the time and effort in project initialization, offering easy scaffolding, diverse backend options, and seamless HTMX integration for a more efficient development process.
             </p>
         </section>
     
         <section id="installation" class="my-4">
             <h2>Installation</h2>
-            <p>To install HoTMiX, you need to have NPM installed on your system. Type the following in your terminal:</p>
+            <p>To install HoTMiXer, you need to have NPM installed on your system. Type the following in your terminal:</p>
             <pre><code>npm install hotmixer --global</code></pre>
         </section>
         
 
         <section id="getting-started" class="my-4">
             <h2>Getting Started</h2>
-            <p>Once installed, you can start using HoTMiX to create new projects. Here's a quick guide:</p>
+            <p>Once installed, you can start using HoTMiXer to create new projects. Here's a quick guide:</p>
             <ol>
                 <li>Open your terminal or command prompt.</li>
-                <li>Run the command <code>hotmix create myproject</code> to create a new project.</li>
+                <li>Run the command <code>hotmixer create myproject</code> to create a new project.</li>
                 <li>Select the backend technology when prompted.</li>
             </ol>
             <p>This will create a new directory with all the necessary files to get started with your project.</p>
@@ -91,15 +91,15 @@
 
         <section id="usage-examples" class="my-4">
             <h2>Usage Examples</h2>
-            <p>HoTMiX can be used in various scenarios, such as:</p>
+            <p>HoTMiXer can be used in various scenarios, such as:</p>
             <ul>
                 <li>Creating a new web application with Flask and HTMX.</li>
                 <li>Setting up a Node.js project with pre-configured HTMX templates.</li>
             </ul>
             <p>Example commands:</p>
-            <pre><code>hotmix create blog --backend flask</code></pre>
+            <pre><code>hotmixer create blog --backend flask</code></pre>
             <p>This command sets up a new blog project using Flask as the backend.</p>
-            <p>HoTMiX supports the following backends:</p>
+            <p>HoTMiXer supports the following backends:</p>
             <ul>
                 <li>Python - Flask</li>
                 <li>Golang - Gin</li>
@@ -127,17 +127,17 @@
 
         <section id="faq" class="my-4">
             <h2>FAQs</h2>
-            <p>Here are some frequently asked questions about HoTMiX:</p>
+            <p>Here are some frequently asked questions about HoTMiXer:</p>
             <dl>
-                <dt>Q: How do I update HoTMiX?</dt>
-                <dd>A: Run <code>hotmix update</code> in your terminal.</dd>
+                <dt>Q: How do I update HoTMiXer?</dt>
+                <dd>A: Run <code>hotmixer update</code> in your terminal.</dd>
                 <!-- Add more FAQs as needed -->
             </dl>
         </section>
 
         <section id="contributing" class="my-4">
             <h2>Contributing</h2>
-            <p>We welcome contributions from the community. If you're interested in contributing, please check our README <a href="https://github.com/KDreynolds/HoTMiX">here</a>.</p>
+            <p>We welcome contributions from the community. If you're interested in contributing, please check our README <a href="https://github.com/KDreynolds/HoTMiXer">here</a>.</p>
         </section>
 
         <section id="license" class="my-4">
@@ -148,7 +148,7 @@
 
         <section id="acknowledgments" class="my-4">
             <h2>Acknowledgments</h2>
-            <p>Special thanks to the contributors and community members who have played a pivotal role in the development and growth of HoTMiX. A heartfelt appreciation to Mr. Carson Gross for his invaluable insights and contributions. We also acknowledge the support and feedback from the HoTMiX user community, which has been instrumental in shaping the tool's evolution.</p>
+            <p>Special thanks to the contributors and community members who have played a pivotal role in the development and growth of HoTMiXer. A heartfelt appreciation to Mr. Carson Gross for his invaluable insights and contributions. We also acknowledge the support and feedback from the HoTMiXer user community, which has been instrumental in shaping the tool's evolution.</p>
         </section>
         
 
@@ -157,7 +157,7 @@
             <p>For more information, support requests, or to report issues, please reach out through the following channels:</p>
             <ul>
                 <li>Email: <a href="mailto:kylereynoldsdev@gmail.com">kylereynoldsdev@gmail.com</a></li>
-                <li>GitHub Issues: <a href="https://github.com/KDreynolds/HoTMiX/issues">HoTMiX GitHub Issues</a></li>
+                <li>GitHub Issues: <a href="https://github.com/KDreynolds/HoTMiXer/issues">HoTMiXer GitHub Issues</a></li>
                 <li>Twitter: <a href="https://twitter.com/imyerf">@imYerf</a></li>
             </ul>
             <p>We strive to respond to queries and resolve issues promptly and appreciate your feedback and suggestions for improving HoTMiXer.</p>
@@ -174,7 +174,7 @@
                     <a href="/templates/docs.html" class="btn btn-outline-light">Docs</a>
                 </div>
                 <div class="col">
-                    <p>Created with HoTMiX - Your HTMX scaffolding tool.</p>
+                    <p>Created with HoTMiXer - Your HTMX scaffolding tool.</p>
                 </div>
                 <div class="col">
                     <a href="https://www.npmjs.com/package/hotmixer" target="_blank" class="btn btn-outline-light">NPM - HoTMiXer</a>
