--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
                     <a href="/templates/docs.html" class="btn btn-outline-light">Docs</a>
                 </div>
                 <div class="col">
-                    <p>Created with HoTMiX - Your HTMX scaffolding tool.</p>
+                    <p>Created with HoTMiXer - Your HTMX scaffolding tool.</p>
                 </div>
                 <div class="col">
                     <a href="https://www.npmjs.com/package/hotmixer" target="_blank" class="btn btn-outline-light">NPM - HoTMiXer</a>
@@ -91,16 +91,16 @@
     <script src="https://unpkg.com/htmx.org"></script>
     <script>
         var i = 0;
-        var txt = `hotmixer create hotmix-site\n
+        var txt = `hotmixer create hotmixer-site\n
         Script started\n
-        Command received: create hotmix-site\n
+        Command received: create hotmixer-site\n
         ? Which backend would you like to use? flask\n
         ? Which styling would you like to use? bootstrap\n
-        Creating new project: hotmix-site\n
-        ✔ Directory hotmix-site created successfully.\n
+        Creating new project: hotmixer-site\n
+        ✔ Directory hotmixer-site created successfully.\n
         ✔ Template files copied successfully.\n
         ✔ Dependencies installed successfully.\n
-        ⠋ Initializing Git repositoryInitialized empty Git repository in C:/Users/kyle.reynolds/Documents/Dev/hotmix-site/.git/\n
+        ⠋ Initializing Git repositoryInitialized empty Git repository in C:/Users/kyle.reynolds/Documents/Dev/hotmixer-site/.git/\n
         `;
         var speed = 50;
 
