--- a/templates/docs.html
+++ b/templates/docs.html
@@ -22,6 +22,7 @@
         </div>
     </nav>
 
+    <div class="container-lg justify-content-center flex-nowrap sticky-nav">
     <nav id="navbar-example2" class="navbar px-3">
         <div class="container-lg justify-content-center flex-nowrap">
         <ul class="nav nav-pills">
@@ -55,6 +56,7 @@
         </ul>
     </div>
     </nav>
+    </div>
 
     <main id="main-content" class="container py-4">
         <header class="text-center py-5">
@@ -188,20 +190,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/htmx.org"></script>
-    <script>
-            window.onscroll = function() {myFunction()};
-
-    var navbar = document.getElementById("navbar-example2");
-    var sticky = navbar.offsetTop;
-
-    function myFunction() {
-        if (window.pageYOffset >= sticky) {
-            navbar.classList.add("sticky")
-        } else {
-            navbar.classList.remove("sticky");
-        }
-    }
-    </script>
 
 </body>
 </html>
