--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    color: #333;
+    background-color: #fff;
 }
 
 header {
@@ -41,6 +43,7 @@ header {
     width: 35%; 
     height: auto;
 }
+
 
 
 .sticky-nav {
@@ -80,3 +83,21 @@ header {
         white-space: nowrap;
     }
 }
+
+.skip-link {
+    position: absolute;
+    top: -40px;
+    left: 0;
+    background: #000;
+    color: white;
+    padding: 8px;
+    z-index: 100;
+  }
+  .skip-link:focus {
+    top: 0;
+  }
+
+a:focus, button:focus, input:focus {
+    outline: 2px solid #0066cc;
+    outline-offset: 2px;
+  }
