--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 		<img src="/static/logo-no-background.png" alt="HoTMiXer logo" class="logo-small">
 	</div>
 
-    <main id="main-content" class="container py-4">
+    <main id="main-content" class="container py-4 bg-white" role="main">
       <div class="row">
         <section id="quick-scaffolding" class="col-md-4 my-5 bg-light p-4 rounded shadow">
             <h2 class="text-dark-green">Quick Scaffolding</h2>
@@ -69,7 +69,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="text-center py-3">
+    <footer class="bg-dark text-light text-center py-3">
         <div class="container">
             <div class="row">
                 <div class="col">
