--- a/templates/docs.html
+++ b/templates/docs.html
@@ -59,7 +59,7 @@
     </nav>
     </div>
 
-    <main id="main-content" class="container py-4">
+    <main id="main-content" class="container py-4 bg-white" role="main">
         <a href="#main-content" class="skip-link">Skip to main content</a>
         <header class="text-center py-5">
             <h1>HoTMiXer Documentation</h1>
@@ -171,7 +171,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="text-center py-3">
+    <footer class="bg-dark text-light text-center py-3">
         <div class="container">
             <div class="row">
                 <div class="col">
