--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,36 @@ header {
     height: auto;
 }
 
+.bg-dark {
+    background-color: #343a40 !important;
+}
 
+.text-light {
+    color: #f8f9fa !important;
+}
+
+.btn-primary {
+    background-color: #0056b3;
+    border-color: #0056b3;
+}
+
+.btn-primary:hover, .btn-primary:focus {
+    background-color: #003d82;
+    border-color: #003d82;
+}
+
+.terminal {
+    background-color: #2c2c2c;
+    color: #fff;
+}
+
+.nav-link {
+    color: #ffffff;
+}
+
+.nav-link:hover, .nav-link:focus {
+    color: #0056b3;
+}
 
 .sticky-nav {
     position: sticky;
